gitops/huntarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huntarr
  labels:
    app: huntarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      containers:
      - name: huntarr
        image: ghcr.io/plexguide/huntarr:8.2.25
        imagePullPolicy: Always
        ports: 
        - containerPort: 9705
        volumeMounts:
        - name: huntarr-config
          mountPath: /config
      volumes:
      - name: huntarr-config
        persistentVolumeClaim:
          claimName: huntarr-config
