gitops/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
spec:
  ports:
  - name: app
    port: 80
    targetPort: 9705
    protocol: TCP
    appProtocol: http
  selector:
    app: huntarr
